# evfs

./: .clang-format  .gitignore  LICENSE  README.md  meson.build
.github/workflows/: build_and_run_tests.yml
adapters/: dir-common.h  fs_dir.cpp  meson.build  syscalls.cpp
adapters/api/vfs/: syscalls.hpp
adapters/newlib/: syscalls.cpp
adapters/sys/sys/: dirent.h  mount.h  statvfs.h
lib/: meson.build
lib/api/vfs/: blockdev.hpp  defs.hpp  disk.hpp  disk_mngr.hpp  filesystem.hpp  fstypes.hpp  partition.hpp  partition_stats.hpp  stdstream.hpp  vfs.hpp
lib/api/vfs/tools/: fdisk.hpp  mbr_partition.hpp  mkfs.hpp
lib/common/: disk.cpp  disk_mngr.cpp  file_descriptor.hpp  file_descriptor_container.hpp  locker.hpp  partition.cpp  vfs.cpp
lib/config/: ffconf.h  meson.build
lib/fstypes/: filesystem.cpp  filesystem_lwext4.cpp  filesystem_lwext4.hpp
lib/fstypes/handle/: fatfs_handle.cpp  fatfs_handle.hpp  lwext4_handle.cpp  lwext4_handle.hpp
lib/logger/: log.hpp  logger.cpp  logger.hpp
lib/tools/: fdisk.cpp  mkfs.cpp
test/: dir_test.cpp  fd_test.cpp  meson.build  syscalls_test.cpp  vfs_test.cpp
test/common/: FilesystemUnderTest.cpp  FilesystemUnderTest.hpp  initializers.hpp  partition_layout.hpp  ram_blkdev.cpp  ram_blkdev.hpp
